--- a/html/client/index.html
+++ b/html/client/index.html
@@ -35,7 +35,7 @@
         var m3o = new Client(token);
 
         m3o.call(service, endpoint, request, function(response) {
-          document.getElementById("response").innerText = JSON.stringify(response);
+          document.getElementById("response").innerText = response;
         });
       });
   </script>
